--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,9 +1,12 @@
-import(Matrix)
-import(quadprog)
 import(knitr)
-importFrom("shiny","shinyWidgets","plotly","colourpicker","patchwork","viridis","cowplot","ggpubr","shinycssloaders","shinyjqui","RColorBrewer")
-importFrom("dplyr","tidyr","reshape2","stringr","tibble","readxl","data.table","tidyverse")
-importFrom("ggplot2","pheatmap","karyoploteR","berryFunctions","MetBrewer","qqman","pcaMethods","kinship2","Seurat","survminer","survival","ggthemes")
-export(dataImport)
-export(plotPCA)
-export(ggsave_both)
+import(dplyr)
+import(tidyr)
+import(stringr)
+import(ggplot2)
+import(shiny)
+import(shinyWidgets)
+importFrom("readxl","read_excel","excel_sheets")
+
+export(dataImport_ui)
+export(dataImport_server)
+export(dataImport_demo)
