--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,14 +4,20 @@ Date: 2023-05-31
 Title: Shiny Modules for data exploration and visualisation
 Encoding: UTF-8
 Authors@R: c(
-	person("Louis", "Le Nézet", email="louislenezet@gmail.com", role=c("aut","cre")),
+	person("Louis", "Le Nezet", email="louislenezet@gmail.com", role=c("aut","cre"))
 	)
 Depends: 
 	R (>= 3.6.0)
 Imports:
-    shiny,shinyWidgets,plotly,colourpicker,patchwork,viridis,cowplot,ggpubr,shinycssloaders,shinyjqui,RColorBrewer,
-    dplyr,tidyr,reshape2,stringr,tibble,readxl,data.table,tidyverse
-    ggplot2,pheatmap,karyoploteR,berryFunctions,MetBrewer,qqman,pcaMethods,kinship2,Seurat,survminer,survival,ggthemes
+    shiny,
+    shinyWidgets,
+    readxl,
+    data.table,
+    knitr,
+    usethis,
+    tibble,
+    tidyr,
+    rmarkdown
 Description: This comprehensive R package is designed to empower data analysis and exploration
 		by providing a collection of interactive Shiny modules. With a wide range of visualization
 		tools including heatmaps, PCA plots, violin plots, scatter plots, box plots, survival analysis,
@@ -19,14 +25,13 @@ Description: This comprehensive R package is designed to empower data analysis a
 		their data. Whether importing and filtering data, assessing coverage or examining intricate
 		patterns, this package offers an intuitive and interactive interface for effortless data
 		visualization and exploration.
-License: MIT
+License: LICENSE
 biocViews: ShinyApps, PrincipalComponent, Survival, Visualization
 URL: https://github.com/stjude-biohackathon/KIDS23-Team13
 BugReports: https://github.com/stjude-biohackathon/KIDS23-Team13/issues
 RoxygenNote: 7.2.3
 VignetteBuilder: knitr
 Suggests:
-    knitr,
     testthat (>= 3.0.0),
 	vdiffr
 Config/testthat/edition: 3
