--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,8 @@ Imports:
     shinyWidgets,
     readxl,
     knitr,
-    rmarkdown
+    rmarkdown,
+    usethis
 Description: This comprehensive R package is designed to empower data analysis and exploration
 		by providing a collection of interactive Shiny modules. With a wide range of visualization
 		tools including heatmaps, PCA plots, violin plots, scatter plots, box plots, survival analysis,
@@ -22,14 +23,12 @@ Description: This comprehensive R package is designed to empower data analysis a
 		patterns, this package offers an intuitive and interactive interface for effortless data
 		visualization and exploration.
 License: file LICENSE
-biocViews: ShinyApps, PrincipalComponent, Survival, Visualization
+biocViews: ShinyApps, PrincipalComponent, Survival, Visualization, DataImport
 URL: https://github.com/stjude-biohackathon/KIDS23-Team13
 BugReports: https://github.com/stjude-biohackathon/KIDS23-Team13/issues
 RoxygenNote: 7.2.3
 VignetteBuilder: knitr
-LazyData: true
 Suggests:
-    usethis,
     testthat (>= 3.0.0),
 	vdiffr
 Config/testthat/edition: 3
