--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,10 @@ Imports:
     readxl,
     knitr,
     rmarkdown,
-    usethis
+    usethis,
+    ggplot2,
+    htmltools,
+    htmlwidgets
 Description: This comprehensive R package is designed to empower data analysis and exploration
 		by providing a collection of interactive Shiny modules. With a wide range of visualization
 		tools including heatmaps, PCA plots, violin plots, scatter plots, box plots, survival analysis,
