--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,10 @@ export(exportPlot_demo_2)
 export(exportPlot_server)
 export(exportPlot_ui)
 export(get_dataframe)
+export(ggplot_truehist)
+export(plotHist_demo)
+export(plotHist_server)
+export(plotHist_ui)
 export(read_data)
 export(selectVar_demo)
 export(selectVar_server)
