--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,8 @@ Imports:
     usethis,
     ggplot2,
     htmltools,
-    htmlwidgets
+    htmlwidgets,
+    sessioninfo
 Description: This comprehensive R package is designed to empower data analysis and exploration
 		by providing a collection of interactive Shiny modules. With a wide range of visualization
 		tools including heatmaps, PCA plots, violin plots, scatter plots, box plots, survival analysis,
