--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(exportPlot_server)
 export(exportPlot_ui)
 export(get_dataframe)
 export(ggplot_truehist)
+export(plotHeatmaply)
 export(plotHist_demo)
 export(plotHist_server)
 export(plotHist_ui)
