--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,3 +16,7 @@ export(read_data)
 export(selectVar_demo)
 export(selectVar_server)
 export(selectVar_ui)
+import(ggplot2)
+import(pcaMethods)
+import(plotly)
+import(shiny)
