doc updates, simplify histogram module

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,3 +20,18 @@ import(ggplot2)
 import(pcaMethods)
 import(plotly)
 import(shiny)
+importFrom(shiny,NS)
+importFrom(shiny,fluidPage)
+importFrom(shiny,is.reactive)
+importFrom(shiny,mainPanel)
+importFrom(shiny,moduleServer)
+importFrom(shiny,numericInput)
+importFrom(shiny,plotOutput)
+importFrom(shiny,reactive)
+importFrom(shiny,renderPlot)
+importFrom(shiny,req)
+importFrom(shiny,selectInput)
+importFrom(shiny,shinyApp)
+importFrom(shiny,sidebarLayout)
+importFrom(shiny,sidebarPanel)
+importFrom(shiny,tagList)
